When startDir is a file, preselect it.

Works fine for local files, but not for remote dirs, unless we use StatJob.

BUG: 381561